Fix alignment of ZoomBar zoom level icons

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
@@ -68,12 +68,8 @@
     }
   }
   .iconBig {
-    padding: 0;
-    margin: 0;
     &:before {
-      padding: 0;
       margin: 0;
-      position: static;
     }
   }
   .toolPane {
@@ -83,6 +79,9 @@
   }
 
   .iconZoomLevel {
+    &:before {
+      margin: 0;
+    }
     font-size: 10px;
     width: 10px;
     line-height: 10px;
